--- a/site.yml
+++ b/site.yml
@@ -342,6 +342,7 @@
               - CAP_project
             tests_additional_packages_to_load:
               - IO_ForHomalg
+              - FreydCategoriesForCAP
               - FinSetsForCAP
               - Locales
             tests_only_basic: true
