--- a/site.yml
+++ b/site.yml
@@ -146,6 +146,8 @@
               \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
               \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
+              \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
+              \DeclareUnicodeCharacter{2022}{\ensuremath{\bullet}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
