--- a/site.yml
+++ b/site.yml
@@ -67,7 +67,7 @@
               \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
               \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
-              \DeclareUnicodeCharacter{2022}{\ensuremath{\bullet}}
+              \DeclareUnicodeCharacter{22C5}{\ensuremath{\cdot}}
               \DeclareUnicodeCharacter{2297}{\ensuremath{\otimes}}
             needed_other_repositories:
               - homalg_project
@@ -131,7 +131,7 @@
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
               \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
               \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
-              \DeclareUnicodeCharacter{2022}{\ensuremath{\bullet}}
+              \DeclareUnicodeCharacter{22C5}{\ensuremath{\cdot}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
@@ -151,7 +151,7 @@
               \usepackage{tikz-cd}
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
               \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
-              \DeclareUnicodeCharacter{2022}{\ensuremath{\bullet}}
+              \DeclareUnicodeCharacter{22C5}{\ensuremath{\cdot}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
