--- a/site.yml
+++ b/site.yml
@@ -180,6 +180,7 @@
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
               \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
               \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
+              \DeclareUnicodeCharacter{22C5}{\ensuremath{\cdot}}
             tests_additional_packages_to_load:
               - ToolsForCategoricalTowers ## load before FinSetsForCAP
               - FinSetsForCAP       ## load before FreydCategoriesForCAP
