--- a/site.yml
+++ b/site.yml
@@ -158,6 +158,8 @@
               - HigherHomologicalAlgebra
               - QPA2
               - FinSetsForCAP
+            tests_additional_packages_to_load:
+              - Digraphs
             tests_only_basic: true
             tests_without_precompiled_code: true
             has_subsplit: true
