--- a/site.yml
+++ b/site.yml
@@ -282,6 +282,8 @@
               \DeclareUnicodeCharacter{22A4}{\ensuremath{\top}}
               \DeclareUnicodeCharacter{22A5}{\ensuremath{\bot}}
               \DeclareUnicodeCharacter{21D2}{\ensuremath{\Rightarrow}}
+              \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
+              \DeclareUnicodeCharacter{22C5}{\ensuremath{\cdot}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
