--- a/site.yml
+++ b/site.yml
@@ -1079,6 +1079,7 @@
               - path:        CategoricalTowers/LazyCategories
               - path:              CAP_project/LinearAlgebraForCAP
               - path:        CategoricalTowers/Locales
+              - path:                          MachineLearningForCAP
               - path:              CAP_project/ModulePresentationsForCAP
               - path:              CAP_project/ModulesOverLocalRingsForCAP
               - path:              CAP_project/MonoidalCategories
