--- a/site.yml
+++ b/site.yml
@@ -791,6 +791,7 @@
             tests_only_basic: true
         ci_additional_repositories:
           - homalg_project
+          - ToricVarieties
 
 - name: ArangoDBInterface
   hosts: ArangoDBInterface
